BUG#35160 "Subquery optimization: table pullout is not reflected in EXPLAIN EXTENDED" - When we pull the tables out of a semi-join, re-attach them to the embedding join nest's NESTED_JOIN structure.   This will cause the pull out to show up in EXPLAIN EXTENDED;SHOW WARNINGS output.